-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 11.0.18
-
Component/s: hotspot
-
b08
-
sparc_64
-
solaris
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8299185 | 11.0.19 | Aleksei Voitylov | P2 | Resolved | Fixed | b01 |
Here is what we get with SS12u4:
./configure --with-version-opt=LTS --with-jvm-variants=server --with-boot-jdk=/export/ws/bellsoft/jdk-11.0.14.1 --with-harfbuzz=system --disable-warnings-as-errors --disable-hotspot-gtest
gmake product-images legacy-jre-image
Creating support/modules_libs/java.base/server/libjvm_dtrace.so from 1 file(s)
Creating support/modules_libs/java.base/server/libjvm_db.so from 1 file(s)
Undefined first referenced
symbol in file
long*frame::link_or_null()const /export/ws/workspace/11.0.18/jdk-11.0.18/CT/std/label/solaris-sparcv9/type/b11/b/build/b/hotspot/variant-server/libjvm/objs/os.o
ld: fatal: symbol referencing errors
lib/CompileJvm.gmk:153: recipe for target '/export/ws/workspace/11.0.18/jdk-11.0.18/CT/std/label/solaris-sparcv9/type/b11/b/build/b/support/modules_libs/java.base/server/libjvm.so' failed
gmake[3]: *** [/export/ws/workspace/11.0.18/jdk-11.0.18/CT/std/label/solaris-sparcv9/type/b11/b/build/b/support/modules_libs/java.base/server/libjvm.so] Error 1
make/Main.gmk:272: recipe for target 'hotspot-server-libs' failed
gmake[2]: *** [hotspot-server-libs] Error 1
./configure --with-version-opt=LTS --with-jvm-variants=server --with-boot-jdk=/export/ws/bellsoft/jdk-11.0.14.1 --with-harfbuzz=system --disable-warnings-as-errors --disable-hotspot-gtest
gmake product-images legacy-jre-image
Creating support/modules_libs/java.base/server/libjvm_dtrace.so from 1 file(s)
Creating support/modules_libs/java.base/server/libjvm_db.so from 1 file(s)
Undefined first referenced
symbol in file
long*frame::link_or_null()const /export/ws/workspace/11.0.18/jdk-11.0.18/CT/std/label/solaris-sparcv9/type/b11/b/build/b/hotspot/variant-server/libjvm/objs/os.o
ld: fatal: symbol referencing errors
lib/CompileJvm.gmk:153: recipe for target '/export/ws/workspace/11.0.18/jdk-11.0.18/CT/std/label/solaris-sparcv9/type/b11/b/build/b/support/modules_libs/java.base/server/libjvm.so' failed
gmake[3]: *** [/export/ws/workspace/11.0.18/jdk-11.0.18/CT/std/label/solaris-sparcv9/type/b11/b/build/b/support/modules_libs/java.base/server/libjvm.so] Error 1
make/Main.gmk:272: recipe for target 'hotspot-server-libs' failed
gmake[2]: *** [hotspot-server-libs] Error 1
- backported by
-
JDK-8299185 8296772 backport to jdk11u caused build error on sparc
-
- Resolved
-
- relates to
-
JDK-8296772 os::is_first_C_frame(frame*) crashes on invalid link access
-
- Resolved
-