8298737: 8296772 backport to jdk11u caused build error on sparc

Reviewed-by: goetz